# check-in

./: .gitignore  README.md  app.js  book+stamp.py  book_algo.py  build.gradle.kts  lib_data.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.gradle.kts  utils.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: background_gray_filled.xml  background_gray_stroke.xml  background_keypad_button.xml  background_round_white.xml  background_stamp.xml  bbti.xml  bbti_selector.xml  btn_round_gray_stroke.xml  btn_round_navy_filled.xml  forum.xml  home.xml  home_selector.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  icon_back.xml  (+14 more)
check_in/: code_data.json  code_fake_loader.py  db.sqlite3  lib_data.json  lib_fake_loader.py  manage.py
check_in/book/: urls.py
check_in/book/views/: __init__.py  bbti_views.py  detail_views.py  popular_views.py
check_in/check_in/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
check_in/detail/: urls.py  views.py
check_in/details/: urls.py  views.py
check_in/user/: models.py  urls.py
check_in/user/migrations/: 0001_initial.py  0002_libcode_alter_visit_visitdate.py  0003_delete_libcode_delete_visit.py  0004_initial.py
check_in/user/views/: __init__.py  bbti_views.py  callback_views.py  login_views.py  recentlib_views.py  stamp_views.py
data/: book_detail.json  recent_libraries.json  recommendation_book_two.json  recommendations_today_book.json  stamp_board.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+122 files in other folders)
