[tool.poetry]
name = "check-in"
version = "0.1.0"
description = ""
authors = ["doghoney <andrew1044@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
bs4 = "^0.0.2"
lxml = "^5.3.0"
pymysql = "^1.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
